<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="?attr/actionBarSize">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cc_rubik_one"
                    android:text="@string/title_nav_tvs"
                    android:textAllCaps="true"
                    android:textColor="@color/mine_shaft"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <ImageButton
                    android:id="@+id/btn_search"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_search_24" />
            </LinearLayout>

            <com.majorik.moviebox.feature.navigation.presentation.views.CollectionActionButton
                android:id="@+id/btn_popular_tvs"
                style="@style/Navigation.CollectionActionButtonStyle"
                android:layout_marginTop="16dp"
                app:cb_title="@string/navigation_collection_popular" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_popular_tvs"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:clipChildren="false"
                android:clipToPadding="false" />

            <com.majorik.moviebox.feature.navigation.presentation.views.CollectionActionButton
                android:id="@+id/btn_air_today_tvs"
                style="@style/Navigation.CollectionActionButtonStyle"
                app:cb_title="@string/navigation_air_today" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_air_today_tvs"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:paddingBottom="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_small_poster_card" />

            <com.majorik.moviebox.feature.navigation.presentation.views.CollectionActionButton
                android:id="@+id/btn_trending_tvs"
                style="@style/Navigation.CollectionActionButtonStyle"
                app:cb_title="@string/navigation_in_trends" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_trend_tvs"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:clipChildren="false"
                android:clipToPadding="false" />

            <com.majorik.moviebox.feature.navigation.presentation.views.CollectionActionButton
                android:id="@+id/btn_on_the_air_tvs"
                style="@style/Navigation.CollectionActionButtonStyle"
                app:cb_title="@string/navigation_on_the_air" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_on_the_air_tvs"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:paddingBottom="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_small_poster_card" />

            <com.majorik.moviebox.feature.navigation.presentation.views.CollectionActionButton
                android:id="@+id/btn_companies"
                style="@style/Navigation.CollectionActionButtonStyle"
                app:cb_title="@string/navigation_companies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/networks_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:paddingBottom="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_network" />

            <com.majorik.moviebox.feature.navigation.presentation.views.CollectionActionButton
                android:id="@+id/btn_tv_genres"
                style="@style/Navigation.CollectionActionButtonStyle"
                app:cb_title="@string/navigation_genres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:paddingBottom="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_genre" />

            <com.majorik.moviebox.feature.navigation.presentation.views.CollectionActionButton
                android:id="@+id/btn_tv_trailers"
                style="@style/Navigation.CollectionActionButtonStyle"
                app:cb_title="@string/navigation_trailers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_person_profile_card" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>